# phase_2

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: definitions.json
investor_bulletin/api/: main.py  routes.py
investor_bulletin/api/controllers/: alert_controller.py  market_controller.py  rule_controller.py
investor_bulletin/core/: constants.py  messaging.py
investor_bulletin/db/: config.py  enums.py
investor_bulletin/db/migrations/: env.py
investor_bulletin/db/migrations/versions/: 9a365fd87641_initial_migration.py  add_created_at_column.py  dd7d187ce8d1_seed_alerts_table.py  seed_alert_rules.py
investor_bulletin/event_subscriber/: main.py
investor_bulletin/resources/alert_rules/: alert_rule_dal.py  alert_rule_model.py  alert_rule_schema.py  alert_rule_service.py
investor_bulletin/resources/alerts/: alert_dal.py  alert_model.py  alert_schema.py  alert_service.py
investor_bulletin/resources/market/: market_schema.py  market_service.py
