[tool.poetry]
name = "investor-bulletin"
version = "0.1.0"
description = "Stock market alerts API using FastAPI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
runserver = "investor_bulletin.api.main:app"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.1"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
sqlalchemy-cockroachdb = "^2.0.2"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
amqpstorm = "^2.10.7"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
